[gd_scene load_steps=4 format=3 uid="uid://dkdc3lgikvhio"]

[ext_resource type="PackedScene" uid="uid://bd7y8koo1w71" path="res://scenes/interface_base/interface_base.tscn" id="1_mn2md"]
[ext_resource type="Script" path="res://scenes/interface_base/battlesetup/battle_setup.gd" id="2_ng1v2"]
[ext_resource type="Texture2D" uid="uid://0jmm3api8fgm" path="res://assets/art/ui/arena.png" id="3_gu1wc"]

[node name="BattleSetup" instance=ExtResource("1_mn2md")]
script = ExtResource("2_ng1v2")

[node name="Label" parent="PC/MC/VB" index="0"]
text = "Battle Setup
"

[node name="HB" type="HBoxContainer" parent="PC/MC/VB" index="1"]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="PC/MC/VB/HB" index="0"]
layout_mode = 2
size_flags_vertical = 4

[node name="TopLabel" type="Label" parent="PC/MC/VB/HB/VB" index="0"]
layout_mode = 2
text = "Top lane:"

[node name="TopButton" type="OptionButton" parent="PC/MC/VB/HB/VB" index="1"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Edd"
popup/item_1/text = "Todd"
popup/item_1/id = 1
popup/item_2/text = "Em"
popup/item_2/id = 2

[node name="BotLabel" type="Label" parent="PC/MC/VB/HB/VB" index="2"]
layout_mode = 2
text = "Bot lane:"

[node name="BotButton" type="OptionButton" parent="PC/MC/VB/HB/VB" index="3"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Edd"
popup/item_1/text = "Todd"
popup/item_1/id = 1

[node name="JungleLabel" type="Label" parent="PC/MC/VB/HB/VB" index="4"]
layout_mode = 2
text = "Jungle:"

[node name="JungleButton" type="OptionButton" parent="PC/MC/VB/HB/VB" index="5"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Edd"
popup/item_1/text = "Todd"
popup/item_1/id = 1

[node name="TextureRect" type="TextureRect" parent="PC/MC/VB/HB" index="1"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture = ExtResource("3_gu1wc")
expand_mode = 4
stretch_mode = 4
